--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,10 @@
 {
+  "CONTINUOUS": "Kontinuierlich",
+  "DISCRETE": "Diskret",
+  "PASSTHROUGH": "Durchreichend",
+  "NODES": "Knoten",
+  "EDGES": "Kanten",
+  "LOST": "Hast du dich verirrt? Hier geht's zur Startseite!",
   "NAV_MANAGE": "Verwalten",
   "NAV_EDIT": "Bearbeiten",
   "NAV_COMPARE": "Vergleichen",
@@ -6,7 +12,7 @@
   "NAV_EDIT_TT_INFO": "Dazu muss ein Netzwerk ausgewählt werden",
   "MAIN_INFO_TITLE": "Allgemeine Infos & Erste Schritte",
   "MAIN_INFO_DEMO_TITLE": "Demo-Netzwerk",
-  "MAIN_INFO_DEMO_DESCRIPTION": "Initial befindet sich in der Liste der verfügbaren Netzwerke nur ein Netzwerk, das wir als Demo verwenden. Auf NDEx kannst du es unter seiner UUID <code>5d97a04a-6fab-11ea-bfdc-0ac135e8bacf</code> finden. Das zugehörige Paper ist <a href='https://www.biorxiv.org/content/10.1101/2020.03.22.002386v3' target='_blank'>hier</a> verlinkt.",
+  "MAIN_INFO_DEMO_DESCRIPTION": "Initial befindet sich in der Liste der verfügbaren Netzwerke nur ein Netzwerk, das wir als Demo verwenden. Auf NDEx kannst du es unter seiner UUID <code><a href='https://www.ndexbio.org/viewer/networks/868bd0b0-68d2-11e7-961c-0ac135e8bacf' target='_blank'>868bd0b0-68d2-11e7-961c-0ac135e8bacf</a></code> finden.",
   "MAIN_INFO_DOCUMENTATION_TITLE": "Dokumentation",
   "MAIN_INFO_DOCUMENTATION_DESCRIPTION": "Die Dokumentation zu dieser Anwendung ist als separate .zip-Datei im Release-Commit angehängt. Die dort enthaltene <code>index.html</code> kann direkt ausgeführt werden.",
   "MAIN_INFO_STEPS_TITLE": "Erste Schritte",
@@ -40,16 +46,18 @@
   "MAIN_STATS_GRAPH_ATTRIBUTES_TITLE": "Verfügbare Attribute",
   "MAIN_STATS_DISTRIBUTION_TITLE": "Verteilung",
   "MAIN_STATS_COVERAGE_TITLE": "Überdeckung",
-  "MAIN_STATS_COVERAGE_HINT": "Dieser Balken zeigt an, wie viele Knoten bzw. Kanten dieses Attribut tatsächlich besitzen. Das soll dir helfen, den Verteilungsgraphen oben besser einschätzen zu können.",
+  "MAIN_STATS_COVERAGE_HINT": "Dieser Balken zeigt an, wie viele Knoten bzw. Kanten dieses Attribut tatsächlich besitzen. Das soll dir helfen, den Verteilungsgraphen unten besser einschätzen zu können.",
   "MAIN_STATS_TT_EDIT": "Dieses Netzwerk rendern und bearbeiten",
   "MAIN_STATS_TT_COMPARE": "Dieses Netzwerk zu einem weiteren Netzwerk vergleichen",
   "MAIN_STATS_AXIS_BINS": "Klassen, je zwischen [untereGrenze:obereGrenze]",
   "MAIN_STATS_AXIS_NAMES": "Mögliche Ausprägungen",
-  "MAIN_STATS_AXIS_OCCURANCES": "Anzahl Elemente des Attributs ",
+  "MAIN_STATS_AXIS_OCCURRENCES": "Anzahl Elemente des Attributs ",
   "MAIN_GRAPH_TITLE": "Graph",
   "MAIN_GRAPH_TT_FIT": "Graph an die Größe des Fensters anpassen",
   "MAIN_GRAPH_TT_HOME": "Startseite",
   "MAIN_GRAPH_BTN_FIT": "Größe anpassen",
+  "MAIN_GRAPH_BTN_LAYOUT": "Layout anwenden",
+  "MAIN_GRAPH_BTN_SAVE": "Koordinaten sichern",
   "SIDEBAR_MANAGE_TITLE": "Verfügbare Netzwerke",
   "SIDEBAR_MANAGE_NW_NAME": "Netzwerkname",
   "SIDEBAR_MANAGE_TT_CLIPBOARD": "UUID kopieren",
@@ -124,6 +132,60 @@
   "SIDEBAR_EDIT_NAV_TT_INSPECT": "Netzwerk untersuchen",
   "SIDEBAR_EDIT_NAV_TT_SETTINGS": "Markierungseinstellungen",
   "SIDEBAR_EDIT_BTN_LABEL_DISPLAY_CONTINUOUS_DETAILS": "Details zum Mapping",
+  "SIDEBAR_EDIT_VISUAL_AID_ERROR_HEADER": "Keine Vorschau verfügbar",
+  "SIDEBAR_EDIT_VISUAL_AID_ERROR_TEXT": "Für dieses Attribut konnte keine Vorschau erstellt werden. Prüfe im Editiermodus, ob die Schwellwerte für dieses Mapping korrekt definiert sind. Wahrscheinlich haben zwei Schwellwerte den gleichen Wert. Dadurch ist ihre Differenz null, was zu einem 'Teilen-durch-null'-Fehler führt.",
+  "SIDEBAR_EDIT_TT_PROPERTY_HINT": "Tippe&nbsp;<code>*</code>&nbsp;ein für alle passenden Vorschläge",
+  "SIDEBAR_EDIT_STYLE_PROP_VALIDATION_ERROR_REQUIRED": "Dieses Feld darf nicht leer sein",
+  "SIDEBAR_EDIT_STYLE_PROP_VALIDATION_ERROR_INPUT": "Beachte die Vorschläge für valide Eingaben",
+  "SIDEBAR_EDIT_UNIQUE_THRESH_VALIDATION_ERROR_DUPLICATES": "Schwellwerte dürfen nur einmal vorkommen",
+  "SIDEBAR_EDIT_UNIQUE_THRESH_VALIDATION_ERROR_MINLENGTH": "Wenigstens zwei Schwellwerte müssen definiert werden",
+  "SIDEBAR_EDIT_UNIQUE_THRESH_VALIDATION_ERROR_REQUIRED": "Schwellwert definieren oder entfernen",
+  "SIDEBAR_EDIT_VALUE_VALIDATION_ERROR_DUPLICATE": "Werte, die Schwellwerten zugewiesen werden, müssen eindeutig sein",
+  "SIDEBAR_EDIT_VALUE_VALIDATION_ERROR_MIN_MAPPINGS": "Setze ein visuelles Attribut, um diesen Schwellwert zu nutzen",
+  "SIDEBAR_EDIT_VALUE_VALIDATION_ERROR_VISIBLE": "Für folgende Mappings wurden nicht ausreichend Werte zugewiesen. Pro Mapping müssen mindestens zwei unterschiedliche Schwellwerte mit Werten versehen werden.",
+  "SIDEBAR_EDIT_VALUE_VALIDATION_ERROR_VISIBLE_DISCRETE": "Pro Mapping muss wenigstens ein Wert zugewiesen werden.",
+  "SIDEBAR_EDIT_VALIDATION_OK": "Valide",
+  "SIDEBAR_EDIT_VALIDATION_ERROR_MINLENGTH": "Eine Mapping-Sammlung muss wenigstens ein Mapping enthalten",
+  "SIDEBAR_EDIT_NEW_MAPPING_EDGE_PLACEHOLDER": "Eigenschaft einer Kante eingeben ...",
+  "SIDEBAR_EDIT_NEW_MAPPING_NODE_PLACEHOLDER": "Eigenschaft eines Knotens eingeben ...",
+  "SIDEBAR_EDIT_NEW_MAPPING_PLACEHOLDER": "Visuelle Eigenschaft eingeben ...",
+  "SIDEBAR_EDIT_LABEL_HISTOGRAM": "Histogramm zu ",
+  "SIDEBAR_EDIT_TT_INSPECTION_MODE": "Mappings ansehen",
+  "SIDEBAR_EDIT_TT_EDIT_MODE": "Mappings bearbeiten",
+  "SIDEBAR_EDIT_TT_DELETE_ALL": "Mappings löschen",
+  "SIDEBAR_EDIT_TT_SORT_THRESHOLDS": "Schwellwerte aufsteigend sortieren",
+  "SIDEBAR_EDIT_TT_DISPLAY_CHART_FOR": "Diagramm zu ",
+  "SIDEBAR_EDIT_TT_DISPLAY_GRADIENT_FOR": "Farbgradient zu ",
+  "SIDEBAR_EDIT_TT_TOGGLE_COLOR_PROPERTY_YES": "Dieses Attribut muss als Farbe definiert werden",
+  "SIDEBAR_EDIT_TT_TOGGLE_COLOR_PROPERTY_NO": "Dieses Attribut kann nicht als Farbe definiert werden",
+  "SIDEBAR_EDIT_TT_RESET_MAPPING": "Diese Spalte zurücksetzen",
+  "SIDEBAR_EDIT_TT_DELETE_ROW": "Für alle Mappings diesen Schwellwert löschen",
+  "SIDEBAR_EDIT_TT_DELETE_COL": "Dieses Mapping löschen und ungenutzte Schwellwerte entfernen",
+  "SIDEBAR_EDIT_TT_DELETE_CELL": "Zelle löschen, aber Schwellwert erhalten",
+  "SIDEBAR_EDIT_TT_NEW": "New mapping collection",
+  "SIDEBAR_EDIT_TT_ADD_CELL": "Zelle für diesen Schwellwert und dieses Mapping hinzufügen",
+  "SIDEBAR_EDIT_TT_ADD_THRESHOLD": "Schwellwert hinzufügen",
+  "SIDEBAR_EDIT_TT_ADD_MAPPING": "Mapping hinzufügen",
+  "SIDEBAR_EDIT_TT_ADD_MAPPING_INPUT_SHOW": "Eingabefeld anzeigen",
+  "SIDEBAR_EDIT_TT_ADD_MAPPING_INPUT_HIDE": "Eingabefeld verstecken",
+  "SIDEBAR_EDIT_TT_BTN_ABORT": "Abbrechen und zurück zum Inspektionsmodus",
+  "SIDEBAR_EDIT_TT_BTN_MAGIC_ON": "Vorschau für diese Änderungen",
+  "SIDEBAR_EDIT_TT_BTN_MAGIC_OFF": "Zurück zum Anpassen",
+  "SIDEBAR_EDIT_TT_BTN_APPLY": "Änderungen aufs Netzwerk anwenden",
+  "SIDEBAR_EDIT_TT_BROKEN": "Mapping ist falsch definiert und kann so nicht angewendet werden!",
+  "SIDEBAR_EDIT_TT_DISPLAY_DUPLICATES": "Doppelte Werte müssen verschoben werden",
+  "SIDEBAR_EDIT_TT_MOVE_CELL": "Diesen Wert einem anderen Schwellwert zuweisen",
+  "SIDEBAR_EDIT_TT_MOVE_CELL_HERE": "Wert hier anwenden",
+  "SIDEBAR_EDIT_TT_HAS_DUPLICATES": "Dieser Schwellwert hat doppelte Werte! Das kann zu Problemen führen und sollte ausgebessert werden.",
+  "SIDEBAR_EDIT_ALERT_REMOVE_EDGE_MAPPINGS_HEADLINE": "Kanten-Mappings zum Löschen markiert!",
+  "SIDEBAR_EDIT_ALERT_REMOVE_NODE_MAPPINGS_HEADLINE": "Knote-Mappings zum Löschen markiert!",
+  "SIDEBAR_EDIT_ALERT_REMOVE_EDGE_MAPPINGS": "Sei dir sicher, dass du alle Mappings zu den unten aufgelisteten Kantenattributen löschen möchtest. Das kann nur rückgängig gemacht werden, indem du das Mapping neu importierst. Schau dir die Mappings, die zur Sammlung gehören, nochmal genauer an, wenn du dir unsicher bist.",
+  "SIDEBAR_EDIT_ALERT_REMOVE_NODE_MAPPINGS": "Sei dir sicher, dass du alle Mappings zu den unten aufgelisteten Knotenattributen löschen möchtest. Das kann nur rückgängig gemacht werden, indem du das Mapping neu importierst. Schau dir die Mappings, die zur Sammlung gehören, nochmal genauer an, wenn du dir unsicher bist.",
+  "SIDEBAR_EDIT_ALERT_REMOVE_EP": "Durchreichende:",
+  "SIDEBAR_EDIT_ALERT_REMOVE_ED": "Diskrete:",
+  "SIDEBAR_EDIT_ALERT_REMOVE_EC": "Kontinuierliche:",
+  "MODAL_FONT_FACE_FORM": "Schriftart definieren",
+  "MODAL_FONT_FACE_FORM_DESCRIPTION": "Schriftart und -größe, gegebenenfalls auch Schriftstil, können für das untenstehende Mapping über dieses Formular definiert werden. Zum Abbrechen das Fenster schließen.",
   "MAIN_MAPPINGS_TH_COL": "Spalte mit Daten",
   "MAIN_MAPPINGS_TH_STYLE": "Zugewiesener Style",
   "MAIN_MAPPINGS_GRAPH": "Zurück zum Graph",
@@ -145,8 +207,8 @@
   "MAIN_MAPPINGS_TT_SINGLE_DELETE": "Diesen Eintrag löschen",
   "MAIN_MAPPINGS_CONFIRM_DELETION": "Möchtest du das oben dargestellte Mapping wirklich löschen?",
   "MAIN_MAPPINGS_SINGLE_CONFIRM_DELETION": "Möchtest du diese Eigenschaft vom oben dargestellten Mapping wirklich löschen?",
-  "MAIN_MAPPINGS_CONFIRM_DELETION_YES": "Ja, lösch' es endlich",
-  "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Hab' mich geirrt",
+  "MAIN_MAPPINGS_CONFIRM_DELETION_YES": "Löschen",
+  "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Nicht löschen",
   "MAIN_MAPPINGS_TT_MAP_DETAILS": "Details in obiger Tabelle anzeigen",
   "MAIN_MAPPINGS_NEW_ND": "Neues Mapping: Knoten diskret",
   "MAIN_MAPPINGS_EDIT_ND": "Mapping bearbeiten: Knoten diskret",
