--- a/docs/assets/i18n/en.json
+++ b/docs/assets/i18n/en.json
@@ -1,4 +1,10 @@
 {
+  "CONTINUOUS": "Continuous",
+  "DISCRETE": "Discrete",
+  "PASSTHROUGH": "Passthrough",
+  "NODES": "Nodes",
+  "EDGES": "Edges",
+  "LOST": "Are you lost? Return to main page!",
   "NAV_MANAGE": "Manage",
   "NAV_EDIT": "Edit",
   "NAV_COMPARE": "Compare",
@@ -6,7 +12,7 @@
   "NAV_EDIT_TT_INFO": "Please select a network",
   "MAIN_INFO_TITLE": "General info & First Steps",
   "MAIN_INFO_DEMO_TITLE": "Demo network",
-  "MAIN_INFO_DEMO_DESCRIPTION": "In the list of available networks you will initially find one network we use for demonstration purposes. You can check it out on NDEx by searching for its UUID <code><a href='https://www.ndexbio.org/viewer/networks/5d97a04a-6fab-11ea-bfdc-0ac135e8bacf' target='_blank'>5d97a04a-6fab-11ea-bfdc-0ac135e8bacf</a></code>. The corresponding paper can be found <a href='https://www.biorxiv.org/content/10.1101/2020.03.22.002386v3' target='_blank'>here</a>.",
+  "MAIN_INFO_DEMO_DESCRIPTION": "In the list of available networks you will initially find one network we use for demonstration purposes. You can check it out on NDEx by searching for its UUID <code><a href='https://www.ndexbio.org/viewer/networks/868bd0b0-68d2-11e7-961c-0ac135e8bacf' target='_blank'>868bd0b0-68d2-11e7-961c-0ac135e8bacf</a></code>.",
   "MAIN_INFO_DOCUMENTATION_TITLE": "Documentation",
   "MAIN_INFO_DOCUMENTATION_DESCRIPTION": "The documentation to this application is available as a separate .zip file delivered with the release. You can run the <code>index.html</code> to read up on the code.",
   "MAIN_INFO_STEPS_TITLE": "First steps",
@@ -40,16 +46,18 @@
   "MAIN_STATS_GRAPH_ATTRIBUTES_TITLE": "Attributes",
   "MAIN_STATS_DISTRIBUTION_TITLE": "Distribution chart",
   "MAIN_STATS_COVERAGE_TITLE": "Coverage",
-  "MAIN_STATS_COVERAGE_HINT": "This progress bar indicates how many nodes or edges actually have this attribute. Hopefully this helps you evaluating the distribution above.",
+  "MAIN_STATS_COVERAGE_HINT": "This progress bar indicates how many nodes or edges actually have this attribute. Hopefully this helps you evaluating the distribution below.",
   "MAIN_STATS_TT_EDIT": "Render and edit this network",
   "MAIN_STATS_TT_COMPARE": "Compare this edit to another one",
   "MAIN_STATS_AXIS_BINS": "Bins between [lowerBorder:upperBorder]",
   "MAIN_STATS_AXIS_NAMES": "Existing values",
-  "MAIN_STATS_AXIS_OCCURANCES": "# elements for attribute ",
+  "MAIN_STATS_AXIS_OCCURRENCES": "# elements for attribute ",
   "MAIN_GRAPH_TITLE": "Graph",
   "MAIN_GRAPH_TT_FIT": "Fit graph to current page layout",
   "MAIN_GRAPH_TT_HOME": "Main page",
   "MAIN_GRAPH_BTN_FIT": "Fit graph",
+  "MAIN_GRAPH_BTN_LAYOUT": "Layout graph",
+  "MAIN_GRAPH_BTN_SAVE": "Save coordinates",
   "SIDEBAR_MANAGE_TITLE": "Available networks",
   "SIDEBAR_MANAGE_NW_NAME": "Network name",
   "SIDEBAR_MANAGE_TT_CLIPBOARD": "Copy this UUID",
@@ -124,6 +132,60 @@
   "SIDEBAR_EDIT_NAV_TT_INSPECT": "Inspect network data",
   "SIDEBAR_EDIT_NAV_TT_SETTINGS": "Highlighting settings",
   "SIDEBAR_EDIT_BTN_LABEL_DISPLAY_CONTINUOUS_DETAILS": "Visit details",
+  "SIDEBAR_EDIT_VISUAL_AID_ERROR_HEADER": "No visual aid available",
+  "SIDEBAR_EDIT_VISUAL_AID_ERROR_TEXT": "For this property no visual aid could be calculated. Please check in edit mode, if the defined thresholds are valid. Probably two thresholds have the same value, therefore the distance between them is zero, which results in a 'division-by-zero' error.",
+  "SIDEBAR_EDIT_TT_PROPERTY_HINT": "Type in&nbsp;<code>*</code>&nbsp;for all suggestions",
+  "SIDEBAR_EDIT_STYLE_PROP_VALIDATION_ERROR_REQUIRED": "This field is required",
+  "SIDEBAR_EDIT_STYLE_PROP_VALIDATION_ERROR_INPUT": "Check the suggestions for valid inputs",
+  "SIDEBAR_EDIT_UNIQUE_THRESH_VALIDATION_ERROR_DUPLICATES": "Thresholds may not occur more than once",
+  "SIDEBAR_EDIT_UNIQUE_THRESH_VALIDATION_ERROR_MINLENGTH": "At least two thresholds have to be defined",
+  "SIDEBAR_EDIT_UNIQUE_THRESH_VALIDATION_ERROR_REQUIRED": "Please define or remove this threshold",
+  "SIDEBAR_EDIT_VALUE_VALIDATION_ERROR_DUPLICATE": "Values assigned to thresholds have to be distinct",
+  "SIDEBAR_EDIT_VALUE_VALIDATION_ERROR_MIN_MAPPINGS": "Assign a style property to use this threshold",
+  "SIDEBAR_EDIT_VALUE_VALIDATION_ERROR_VISIBLE": "The following mappings are missing assigned values. At least two values should be assigned to different thresholds.",
+  "SIDEBAR_EDIT_VALUE_VALIDATION_ERROR_VISIBLE_DISCRETE": "The following mappings are missing assigned values.",
+  "SIDEBAR_EDIT_VALIDATION_OK": "Valid",
+  "SIDEBAR_EDIT_VALIDATION_ERROR_MINLENGTH": "This collection has to contain at least one mapping",
+  "SIDEBAR_EDIT_NEW_MAPPING_EDGE_PLACEHOLDER": "Enter an edge's attribute ...",
+  "SIDEBAR_EDIT_NEW_MAPPING_NODE_PLACEHOLDER": "Enter a node's attribute ...",
+  "SIDEBAR_EDIT_NEW_MAPPING_PLACEHOLDER": "Enter a style property ...",
+  "SIDEBAR_EDIT_LABEL_HISTOGRAM": "Histogram for ",
+  "SIDEBAR_EDIT_TT_INSPECTION_MODE": "Inspection mode",
+  "SIDEBAR_EDIT_TT_EDIT_MODE": "Edit mode",
+  "SIDEBAR_EDIT_TT_DELETE_ALL": "Delete all",
+  "SIDEBAR_EDIT_TT_SORT_THRESHOLDS": "Sort thresholds ascending",
+  "SIDEBAR_EDIT_TT_DISPLAY_CHART_FOR": "Mapping chart for ",
+  "SIDEBAR_EDIT_TT_DISPLAY_GRADIENT_FOR": "Color gradient for ",
+  "SIDEBAR_EDIT_TT_TOGGLE_COLOR_PROPERTY_YES": "This style property has to be a color mapping",
+  "SIDEBAR_EDIT_TT_TOGGLE_COLOR_PROPERTY_NO": "This style property has to be a non-color mapping",
+  "SIDEBAR_EDIT_TT_RESET_MAPPING": "Reset this column to defaults",
+  "SIDEBAR_EDIT_TT_DELETE_ROW": "Deletes this threshold for all mappings in this collection",
+  "SIDEBAR_EDIT_TT_DELETE_COL": "Deletes this mapping and clears out unused thresholds",
+  "SIDEBAR_EDIT_TT_DELETE_CELL": "When deleting this cell its threshold stays",
+  "SIDEBAR_EDIT_TT_NEW": "New mapping collection",
+  "SIDEBAR_EDIT_TT_ADD_CELL": "Adds a cell to this threshold and column",
+  "SIDEBAR_EDIT_TT_ADD_MAPPING": "Adds a mapping to this collection",
+  "SIDEBAR_EDIT_TT_ADD_MAPPING_INPUT_SHOW": "Show input field",
+  "SIDEBAR_EDIT_TT_ADD_MAPPING_INPUT_HIDE": "Hide input field",
+  "SIDEBAR_EDIT_TT_ADD_THRESHOLD": "Adds a threshold to this collection, usable for all mappings",
+  "SIDEBAR_EDIT_TT_BTN_ABORT": "Abort and return to inspection mode",
+  "SIDEBAR_EDIT_TT_BTN_MAGIC_ON": "Show me how this mapping would apply to the network",
+  "SIDEBAR_EDIT_TT_BTN_MAGIC_OFF": "Return to editing this mapping",
+  "SIDEBAR_EDIT_TT_BTN_APPLY": "Applying the defined mapping to the network. Be sure about this!",
+  "SIDEBAR_EDIT_TT_BROKEN": "Mapping is not valid and cannot be applied to the network!",
+  "SIDEBAR_EDIT_TT_DISPLAY_DUPLICATES": "Duplicate values have to be moved",
+  "SIDEBAR_EDIT_TT_MOVE_CELL": "Assign this value to another threshold",
+  "SIDEBAR_EDIT_TT_MOVE_CELL_HERE": "Apply here",
+  "SIDEBAR_EDIT_TT_HAS_DUPLICATES": "This thresholds has duplicates! This should be avoided, since it can result in problems.",
+  "SIDEBAR_EDIT_ALERT_REMOVE_EDGE_MAPPINGS_HEADLINE": "There are edge mappings marked to be deleted!",
+  "SIDEBAR_EDIT_ALERT_REMOVE_NODE_MAPPINGS_HEADLINE": "There are node mappings marked to be deleted!",
+  "SIDEBAR_EDIT_ALERT_REMOVE_EDGE_MAPPINGS": "All mappings associated to the edge properties below are deleted if you continue. You can still check out the marked mappings in inspection mode, if you're unsure about this. Deleting the collection can only be undone by reimporting the network.",
+  "SIDEBAR_EDIT_ALERT_REMOVE_NODE_MAPPINGS": "All mappings associated to the node properties below are deleted if you continue. You can still check out the marked mappings in inspection mode, if you're unsure about this. Deleting the collection can only be undone by reimporting the network.",
+  "SIDEBAR_EDIT_ALERT_REMOVE_EP": "Passthrough:",
+  "SIDEBAR_EDIT_ALERT_REMOVE_ED": "Discrete:",
+  "SIDEBAR_EDIT_ALERT_REMOVE_EC": "Continuous:",
+  "MODAL_FONT_FACE_FORM": "Define font face property",
+  "MODAL_FONT_FACE_FORM_DESCRIPTION": "Adjust font face and size, even font style for specific fonts. The mapping is displayed below. To abort close this window without hitting submit.",
   "MAIN_MAPPINGS_TH_COL": "Data column",
   "MAIN_MAPPINGS_TH_STYLE": "Applied style",
   "MAIN_MAPPINGS_GRAPH": "Return to graph",
@@ -145,8 +207,8 @@
   "MAIN_MAPPINGS_TT_SINGLE_DELETE": "Remove this line",
   "MAIN_MAPPINGS_CONFIRM_DELETION": "Are you really sure you want to delete the mapping above?",
   "MAIN_MAPPINGS_SINGLE_CONFIRM_DELETION": "Are you really sure you want to delete this property from the mapping?",
-  "MAIN_MAPPINGS_CONFIRM_DELETION_YES": "I'm pretty sure, delete this",
-  "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Never mind",
+  "MAIN_MAPPINGS_CONFIRM_DELETION_YES": "Delete this",
+  "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Don't delete this",
   "MAIN_MAPPINGS_TT_MAP_DETAILS": "Show details in table above",
   "MAIN_MAPPINGS_NEW_ND": "New mapping: Nodes discrete",
   "MAIN_MAPPINGS_EDIT_ND": "Edit mapping: Nodes discrete",
